--- a/style.css
+++ b/style.css
@@ -25,7 +25,39 @@ html body {
     position: absolute;
     top: 0.5%;
     left: 0.5%;
-    color: rgb(83, 175, 19);
+    color: rgb(250, 250, 250);
+    font-size: xx-large;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.05);
+    opacity: 0.75;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.pulse {
+  animation: pulse 1.5s infinite;
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 6px;
+  display: inline-block;
+}
+
+.hitBackground{
+  background-color: green;
+}
+
+.missBackground{
+  background-color: red;
 }
 
 table{
