--- a/style.css
+++ b/style.css
@@ -6,25 +6,25 @@ html body {
 }
 
 #board {
-    position: relative;
+    /* position: relative;
     /* full viewport width */
-    width: 98vw;
+    /* width: 98vw; */
     /* full viewport height */
-    height: 98vh;
-    margin: auto;
-    margin-top: 0;
+    /* height: 98vh; */
+    /* margin: auto; */
+    /* margin-top: 0;  */
     background-image: url("images/board.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
-    border: solid;
-    border-color: red;
+    background-position: center; 
+    /* border: solid;
+    border-color: red; */
 }
 
 #message {
-    position: absolute;
-    top: 0.5%;
-    left: 0.5%;
+    /* position: absolute; */
+    /* top: 0.5%; */
+    /* left: 0.5%; */
     color: rgb(250, 250, 250);
     font-size: xx-large;
 }
@@ -68,8 +68,8 @@ table{
 }
 
 td{
-    width: 60px;
-    height: 60px;
+    width: 69px;
+    height: 69px;
     border: solid;
     border-color: yellow;
 }
@@ -78,13 +78,14 @@ form {
     position: absolute;
     bottom: 0.8%;
     right: 0.8%;
-    background-color: rgb(83, 175, 19);
+    /* background-color: rgb(83, 175, 19); */
 }
 
 form input{
     background-color: rgb(152, 207, 113);
     border-color: rgb(83, 175, 19);
     font-size: 0.9em;
+    size: 30px;
 }
 
 .hit{
